<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="details_action_play">Play</string>
    <string name="details_action_resume">Resume</string>
    <string name="details_action_like">Like</string>
    <string name="details_action_liked">Liked</string>
    <string name="details_action_my_list">My List</string>
    <string name="details_action_trailer">Trailer</string>
    <string name="details_action_not_available">Not available</string>
    <string name="details_action_updating">Updating</string>
    <string name="details_like_selected">Liked</string>
    <string name="details_like_unselected">Not liked</string>
    <string name="details_my_list_selected">In My List</string>
    <string name="details_my_list_unselected">Not in My List</string>
</resources>
